[package]
name = "llm_gateway"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1.3", features = ["full"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
regex = "1"